# dylo

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: test.yml
con/: Cargo.toml  README.md
con-cli/: Cargo.toml  README.md
con-cli/src/: main.rs
con-loader/: Cargo.toml  README.md
con-loader/src/: details.rs
con-loader/src/details/: platform.rs
con/src/: lib.rs
dylo/: CHANGELOG.md  Cargo.toml  README.md
dylo-cli/: CHANGELOG.md  Cargo.toml  README.md
dylo-cli/src/: codegen.rs  command.rs  dependency.rs  init_template.rs  load_template.rs  main.rs  tests.rs  types.rs  workspace.rs
dylo-cli/src/snapshots/: dylo__dependency__tests__cargo_toml_after_add.snap  dylo__dependency__tests__cargo_toml_after_remove.snap  dylo__tests__snapshot_simple_module.snap
dylo-cli/src/testdata/: simple-module.rs  test-cargo.toml
dylo-runtime/: CHANGELOG.md  Cargo.toml  README.md
dylo-runtime/src/: details.rs  lib.rs
dylo-runtime/src/details/: platform.rs
dylo/src/: lib.rs
test-workspace/: Cargo.toml
test-workspace/mods/mod-clap/: Cargo.toml
