[package]
name = "con-loader"
version = "1.0.0"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Dynamic library loader for con traits"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/con"
keywords = ["ffi", "dynamic-library", "loader"]
categories = ["development-tools"]
rust-version = "1.83"

[dependencies]
rubicon = { version = "3.4.9" }

[features]
import-globals = ["rubicon/import-globals"]
export-globals = ["rubicon/export-globals"]
