[package]
name = "dylo-runtime"
version = "1.0.3"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Dynamic library loader for con traits"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/bearcove/dylo"
keywords = ["ffi", "dynamic-library", "loader"]
categories = ["development-tools"]
rust-version = "1.83"

[dependencies]
rubicon = "3.4.9"

[features]
import-globals = ["rubicon/import-globals"]
export-globals = ["rubicon/export-globals"]
