[workspace]
members = [
    "con",
    "con-cli",
    "con-loader", "test-workspace/app",
]
exclude = [
    "test-workspace",
]
resolver = "2"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = 1
lto = "off"
split-debuginfo = "unpacked"
